force-app/main/default/objects/SyatakusanSetting__c/SyatakusanSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>しゃたくさん設定</label>
</CustomObject>