force-app/main/default/objects/SyatakusanSetting__c/fields/AcceptRegisterWithoutMediationTeamId__c.field-meta.xml
<CustomField>
    <fullName>AcceptRegisterWithoutMediationTeamId__c</fullName>
    <label>新規未特定決定物件登録受付チームId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>