force-app/main/default/objects/SyatakusanSetting__c/fields/AttendanceGroup__c.field-meta.xml
<CustomField>
    <fullName>AttendanceGroup__c</fullName>
    <label>出社グループ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>