force-app/main/default/objects/SyatakusanSetting__c/fields/BankCodeMitsubishiUFJ__c.field-meta.xml
<CustomField>
    <fullName>BankCodeMitsubishiUFJ__c</fullName>
    <label>銀行コード：三菱UFJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>