force-app/main/default/objects/SyatakusanSetting__c/fields/BankCodeMitsuisumitomo__c.field-meta.xml
<CustomField>
    <fullName>BankCodeMitsuisumitomo__c</fullName>
    <label>銀行コード：三井住友</label>
    <length>255</length>
    <type>Text</type>
</CustomField>