force-app/main/default/objects/SyatakusanSetting__c/fields/BankCodeMizuho__c.field-meta.xml
<CustomField>
    <fullName>BankCodeMizuho__c</fullName>
    <label>銀行コード：みずほ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>