force-app/main/default/objects/SyatakusanSetting__c/fields/BillingManagementTeamSection__c.field-meta.xml
<CustomField>
    <fullName>BillingManagementTeamSection__c</fullName>
    <label>請求管理チームセクション</label>
    <length>255</length>
    <type>Text</type>
</CustomField>