force-app/main/default/objects/SyatakusanSetting__c/fields/CorporateHousingDataTeamSection__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingDataTeamSection__c</fullName>
    <label>社宅データチームセクション</label>
    <length>255</length>
    <type>Text</type>
</CustomField>