force-app/main/default/objects/SyatakusanSetting__c/fields/CreateFbDataNotificationBody__c.field-meta.xml
<CustomField>
    <fullName>CreateFbDataNotificationBody__c</fullName>
    <label>FBデータ作成完了通知本文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>