force-app/main/default/objects/SyatakusanSetting__c/fields/CreateFbDataNotificationTitle__c.field-meta.xml
<CustomField>
    <fullName>CreateFbDataNotificationTitle__c</fullName>
    <label>FBデータ作成完了通知タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>