force-app/main/default/objects/SyatakusanSetting__c/fields/PaymentCategoryDepositSettlement__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategoryDepositSettlement__c</fullName>
    <label>支払区分：敷金精算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>