force-app/main/default/objects/SyatakusanSetting__c/fields/PaymentCategoryLeaveSettlement__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategoryLeaveSettlement__c</fullName>
    <label>支払区分：退去精算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>