force-app/main/default/objects/SyatakusanSetting__c/fields/PaymentCategoryNotCreateSpotFbData__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategoryNotCreateSpotFbData__c</fullName>
    <label>スポットFBデータ作成対象外支払区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>