force-app/main/default/objects/SyatakusanSetting__c/fields/PaymentCategoryOther__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategoryOther__c</fullName>
    <label>支払区分：その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>