force-app/main/default/objects/SyatakusanSetting__c/fields/PaymentTargetHandlingType__c.field-meta.xml
<CustomField>
    <fullName>PaymentTargetHandlingType__c</fullName>
    <label>支払対象取扱種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>