force-app/main/default/objects/SyatakusanSetting__c/fields/RecreatePaymentNotificationBody__c.field-meta.xml
<CustomField>
    <fullName>RecreatePaymentNotificationBody__c</fullName>
    <label>支払再作成完了通知本文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>