force-app/main/default/objects/SyatakusanSetting__c/fields/RecreatePaymentNotificationTitle__c.field-meta.xml
<CustomField>
    <fullName>RecreatePaymentNotificationTitle__c</fullName>
    <label>支払再作成完了通知タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>