force-app/main/default/objects/SyatakusanSetting__c/fields/sntCustomerSiteCheckListUrl__c.field-meta.xml
<CustomField>
    <fullName>sntCustomerSiteCheckListUrl__c</fullName>
    <label>企業ポータルサイト_チェックリストURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>