force-app/main/default/objects/SyatakusanSetting__c/fields/sntCustomerSiteId__c.field-meta.xml
<CustomField>
    <fullName>sntCustomerSiteId__c</fullName>
    <label>企業ポータルサイトId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>