force-app/main/default/objects/SyatakusanSetting__c/fields/SystemUserId__c.field-meta.xml
<CustomField>
    <fullName>SystemUserId__c</fullName>
    <label>システムユーザId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>