force-app/main/default/objects/SyatakusanSetting__c/fields/TransferFee__c.field-meta.xml
<CustomField>
    <fullName>TransferFee__c</fullName>
    <label>振込手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>